--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Stats
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  [Stats placeholder]
 </ion-content>
