--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="mapRoot" tabTitle="Map" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tripsRoot" tabTitle="Trips" tabIcon="bicycle"></ion-tab>
+  <ion-tab [root]="statsRoot" tabTitle="Stats" tabIcon="stats"></ion-tab>
+  <ion-tab [root]="settingsRoot" tabTitle="Settings" tabIcon="settings"></ion-tab>
 </ion-tabs>
