--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,12 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      <span class="heading-stopped" *ngIf="!geo.isRecording">Stopped</span>
-      <span class="heading-recording" *ngIf="geo.isRecording">Recording</span>
+      <span class="heading-stopped" *ngIf="isStopped()">Stopped</span>
+      <span class="heading-recording" *ngIf="isRecording()">Recording</span>
+      <span class="heading-reporting" *ngIf="isReporting()">Report Incident</span>
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-left *ngIf="!geo.isRecording" (click)="startRecording()"><ion-icon name="bicycle"></ion-icon> Start</button>
-      <button ion-button icon-left *ngIf="geo.isRecording" (click)="stopRecording()"><ion-icon name="checkmark"></ion-icon> Stop</button>
+      <button ion-button icon-left *ngIf="isStopped()" (click)="startRecording()"><ion-icon name="bicycle"></ion-icon> Start</button>
+      <button ion-button icon-left *ngIf="isRecording()" (click)="stopRecording()"><ion-icon name="checkmark"></ion-icon> Stop</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -14,6 +15,6 @@
 <ion-content>
   <div id="map"></div>
   <ion-fab bottom right>
-    <button ion-fab color="primary" *ngIf="!geo.isRecording"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="primary" *ngIf="isStopped()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
