--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -23,6 +23,7 @@
     }
   </script>-->
 
+  <link href="build/mapbox-gl/mapbox-gl.css" rel="stylesheet">
   <link href="build/main.css" rel="stylesheet">
 
 </head>
