Initial work on incident reporting UI.

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -3,11 +3,15 @@
     <ion-title>
       <span class="heading-stopped" *ngIf="isStopped()">Stopped</span>
       <span class="heading-recording" *ngIf="isRecording()">Recording</span>
-      <span class="heading-reporting" *ngIf="isReporting()">Report Incident</span>
+      <span class="heading-reporting" *ngIf="isReporting()">Tap a Location</span>
     </ion-title>
+    <ion-buttons start>
+      <button ion-button icon-left *ngIf="isReporting()" (click)="stopReporting()"><ion-icon name="close"></ion-icon>Cancel</button>
+    </ion-buttons>
     <ion-buttons end>
-      <button ion-button icon-left *ngIf="isStopped()" (click)="startRecording()"><ion-icon name="bicycle"></ion-icon> Start</button>
-      <button ion-button icon-left *ngIf="isRecording()" (click)="stopRecording()"><ion-icon name="checkmark"></ion-icon> Stop</button>
+      <button ion-button icon-left *ngIf="isStopped()" (click)="startRecording()"><ion-icon name="bicycle"></ion-icon>Start</button>
+      <button ion-button icon-left *ngIf="isRecording()" (click)="stopRecording()"><ion-icon name="checkmark"></ion-icon>Stop</button>
+      <button ion-button icon-left *ngIf="isReporting()" [disabled]="!incidentMarker"><ion-icon name="checkmark"></ion-icon>OK</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -15,6 +19,6 @@
 <ion-content>
   <div id="map"></div>
   <ion-fab bottom right>
-    <button ion-fab color="primary" *ngIf="isStopped()"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="primary" *ngIf="isStopped()" (click)='startReporting()'><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
