--- a/src/pages/trip-detail/trip-detail.html
+++ b/src/pages/trip-detail/trip-detail.html
@@ -31,23 +31,23 @@
     </ion-item>
     <ion-item>
       <ion-icon name="timer" item-left></ion-icon>
-        {{trip.formatDuration()}}
+        {{trip.stats.formatDuration()}}
     </ion-item>
     <ion-item>
       <ion-icon name="pin" item-left></ion-icon>
-        {{trip.formatDistance()}} mi
+        {{trip.stats.formatDistance()}} mi
     </ion-item>
     <ion-item>
       <ion-icon name="speedometer" item-left></ion-icon>
-        {{trip.formatSpeed()}} MPH
+        {{trip.stats.formatSpeed()}} MPH
     </ion-item>
     <ion-item>
       <ion-icon name="pizza" item-left></ion-icon>
-        {{trip.formatCalories()}} cal
+        {{trip.stats.formatCalories()}} cal
     </ion-item>
     <ion-item>
       <ion-icon name="leaf" item-left></ion-icon>
-        {{trip.formatGHG()}} lb GHG
+        {{trip.stats.formatGHG()}} lb GHG
     </ion-item>
   </ion-list>
 </ion-content>
