Updated auto recording description.

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,7 +14,7 @@
       <ion-label>
         Automatic Recording
         <button class="explain-button" ion-button icon-only clear small
-          (click)="explain('Starts and stops trips automatically when biking motion is detected.')">
+          (click)="explain('Starts and stops trips automatically while the app is running.')">
           <ion-icon name="help-circle"></ion-icon>
         </button>
       </ion-label>
