--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -36,6 +36,17 @@
 
 <ion-content>
   <div id="map"></div>
+  <div id="trip-stats" *ngIf="isRecording()">
+    <span class="activity">
+      <ion-icon name="remove" *ngIf="isStill()"></ion-icon>
+      <ion-icon name="walk" *ngIf="isOnFoot()"></ion-icon>
+      <ion-icon name="bicycle" *ngIf="isOnBicycle()"></ion-icon>
+      <ion-icon name="car" *ngIf="isInVehicle()"></ion-icon>
+      <ion-icon name="help" *ngIf="isUnknownActivity()"></ion-icon>
+    </span>
+    <span class="duration"><ion-icon name="timer"></ion-icon> {{ stats.formatDuration() }}</span>
+    <span class="distance"><ion-icon name="pin"></ion-icon> {{ stats.formatDistance() }} mi</span>
+  </div>
   <ion-fab bottom right>
     <button ion-fab color="primary" *ngIf="isStopped()"
       (click)='startReporting()'>
