Use stopwatch icon instead of timer.

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -44,7 +44,7 @@
       <ion-icon name="car" *ngIf="isInVehicle()"></ion-icon>
       <ion-icon name="help" *ngIf="isUnknownActivity()"></ion-icon>
     </span>
-    <span class="duration"><ion-icon name="timer"></ion-icon> {{ stats.formatDuration() }}</span>
+    <span class="duration"><ion-icon name="stopwatch"></ion-icon> {{ stats.formatDuration() }}</span>
     <span class="distance"><ion-icon name="pin"></ion-icon> {{ stats.formatDistance() }} mi</span>
   </div>
   <ion-fab bottom right>
