--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -26,7 +26,7 @@
       {{tripsCount}} trips
     </ion-item>
     <ion-item>
-      <ion-icon name="timer" item-left></ion-icon>
+      <ion-icon name="stopwatch" item-left></ion-icon>
       {{stats.formatDuration()}}
     </ion-item>
     <ion-item>
