--- a/src/pages/trip-detail/trip-detail.html
+++ b/src/pages/trip-detail/trip-detail.html
@@ -30,7 +30,7 @@
         {{trip.formatDestination()}}
     </ion-item>
     <ion-item>
-      <ion-icon name="timer" item-left></ion-icon>
+      <ion-icon name="stopwatch" item-left></ion-icon>
         {{trip.stats.formatDuration()}}
     </ion-item>
     <ion-item>
