--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   </script>-->
 
   <link href="build/mapbox-gl/mapbox-gl.css" rel="stylesheet">
+  <link href="build/chartist/chartist.min.css" rel="stylesheet">
   <link href="build/main.css" rel="stylesheet">
 
 </head>
