Improved bar width for charts.

--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -57,7 +57,7 @@
       </button>
     </ion-card-header>
     <ion-card-content>
-      <div class="chart-wrapper">
+      <div class="chart-wrapper chart-{{range}}">
         <x-chartist
           class="chart"
           [data]="chart.data"
