Fixed trip detail scroll behavior.

--- a/src/pages/trip-detail/trip-detail.html
+++ b/src/pages/trip-detail/trip-detail.html
@@ -17,37 +17,39 @@
 </ion-header>
 
 <ion-content>
-  <div id="trip-detail-map"></div>
-  <ion-list padding>
-    <ion-item>
-      <ion-icon name="calendar" item-left></ion-icon>
-        {{trip.startTime.format('MMMM D, YYYY [at] h:mm A')}}
-    </ion-item>
-    <ion-item *ngIf="trip.origin > 0 || trip.destination > 0">
-      <ion-icon name="bicycle" item-left></ion-icon>
-        {{trip.formatOrigin()}}
-        <ion-icon name="arrow-forward"></ion-icon>
-        {{trip.formatDestination()}}
-    </ion-item>
-    <ion-item>
-      <ion-icon name="stopwatch" item-left></ion-icon>
-        {{trip.stats.formatDuration()}}
-    </ion-item>
-    <ion-item>
-      <ion-icon name="pin" item-left></ion-icon>
-        {{trip.stats.formatDistance()}} mi
-    </ion-item>
-    <ion-item>
-      <ion-icon name="speedometer" item-left></ion-icon>
-        {{trip.stats.formatSpeed()}} MPH
-    </ion-item>
-    <ion-item>
-      <ion-icon name="pizza" item-left></ion-icon>
-        {{trip.stats.formatCalories()}} cal
-    </ion-item>
-    <ion-item>
-      <ion-icon name="leaf" item-left></ion-icon>
-        {{trip.stats.formatGHG()}} lb GHG
-    </ion-item>
-  </ion-list>
+  <div ion-fixed id="trip-detail-map"></div>
+  <div class="trip-stats">
+    <ion-list padding-top>
+      <ion-item>
+        <ion-icon name="calendar" item-left></ion-icon>
+          {{trip.startTime.format('MMMM D, YYYY [at] h:mm A')}}
+      </ion-item>
+      <ion-item *ngIf="trip.origin > 0 || trip.destination > 0">
+        <ion-icon name="bicycle" item-left></ion-icon>
+          {{trip.formatOrigin()}}
+          <ion-icon name="arrow-forward"></ion-icon>
+          {{trip.formatDestination()}}
+      </ion-item>
+      <ion-item>
+        <ion-icon name="stopwatch" item-left></ion-icon>
+          {{trip.stats.formatDuration()}}
+      </ion-item>
+      <ion-item>
+        <ion-icon name="pin" item-left></ion-icon>
+          {{trip.stats.formatDistance()}} mi
+      </ion-item>
+      <ion-item>
+        <ion-icon name="speedometer" item-left></ion-icon>
+          {{trip.stats.formatSpeed()}} MPH
+      </ion-item>
+      <ion-item>
+        <ion-icon name="pizza" item-left></ion-icon>
+          {{trip.stats.formatCalories()}} cal
+      </ion-item>
+      <ion-item>
+        <ion-icon name="leaf" item-left></ion-icon>
+          {{trip.stats.formatGHG()}} lb GHG
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
